--- a/_posts/2016-06-04-test-page.md
+++ b/_posts/2016-06-04-test-page.md
@@ -83,3 +83,21 @@ spring.jackson.deserialization.fail-on-unknown-properties=true -> json에서 obj
 - serialize : object->json
   deserialize : json -> object
 - response type -> 201, bad request 처리 
+
+
+5 반영 
+
+1) cd 닉네임.github.io
+2) git status
+ - 빨간색 : 커밋전 
+3) git add *
+ - 커밋가능하게 
+4) git status
+- 초록 : 커밋가능
+5) git commit -m "커밋메시지"
+- 커밋 및 메세지 입력
+6) git status
+7) git remote -v
+- 현재 저장소 확인 
+8) git push
+- 깃허브 저장소에 반영 
