--- a/_posts/2016-06-04-test-page.md
+++ b/_posts/2016-06-04-test-page.md
@@ -26,9 +26,18 @@ api token request with userid, password
 -> token은 secure cookie와 http only 옵션을 통해 브라우저로 전달 
 -> api 호출할때 자동적으로 전송됨
 
+offline_type : access_token, refresh_token
+
+사용자가 로그인하면 client server가 resource server에 승인가능한지 호출
+code return해주면 code, client id/password 로 다시 resource server호출
+resource server에서 access_token 발급 
+만료됐을때 
+
 1.4 token type 
 토큰자체만
 JWT : 토큰에 권한까지
+
+------------------------------------
 
 2. Spring security 
 
@@ -58,6 +67,8 @@ http header나 인증정보를 가져와서 context에 넣는 filter 필요 !!
 
 * OAuth2, 메소드 시큐리티 등 .. 
 
+------------------------------------
+
 3. Restapi
 
 Web
@@ -84,8 +95,9 @@ spring.jackson.deserialization.fail-on-unknown-properties=true -> json에서 obj
   deserialize : json -> object
 - response type -> 201, bad request 처리 
 
+------------------------------------
 
-5 반영 
+4. git 반영 
 
 1) cd 닉네임.github.io
 2) git status
